# SZE-MOSZE-2020-VoicePlay

./: .gitignore  Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  Makefile  Mmap.h  Mmap_8h_source.html  Monster.h  Monster_8h_source.html  OPMonster.json  README.md  Report.md  Zombie.json  annotated.html  autotoc_md0.html  battles.txt  classGame-members.html  classGame.html  classGame_1_1AlreadyHasHeroException-members.html  classGame_1_1AlreadyHasHeroException.html  classGame_1_1AlreadyHasHeroException__coll__graph.map  classGame_1_1AlreadyHasHeroException__inherit__graph.md5  classGame_1_1AlreadyHasUnitsException-members.html  classGame_1_1AlreadyHasUnitsException.html  classGame_1_1AlreadyHasUnitsException__inherit__graph.map  classGame_1_1AlreadyHasUnitsException__inherit__graph.md5  classGame_1_1GameAlreadyStartedException-members.html  classGame_1_1GameAlreadyStartedException.html  classGame_1_1GameAlreadyStartedException__coll__graph.md5  classGame_1_1GameAlreadyStartedException__inherit__graph.map  classGame_1_1GameAlreadyStartedException__inherit__graph.md5  classGame_1_1NotInitializedException-members.html  classGame_1_1NotInitializedException.html  classGame_1_1NotInitializedException__inherit__graph.map  (+123 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  (+47 more)
unit_test/: CMakeLists.txt  Makefile  faultyunit.json  jsonparser.h  unit.cpp  unit2test.json  unit2test2.json  unit2test3.json  unittest.cpp  uselessKeys.json  whitespaceunit1.json  whitespaceunit2.json
(+11 files in other folders)
